--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="3dp"
         android:layout_height="76dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Dark_Green" />
 
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="12dp"
         android:layout_toRightOf="@id/vwLogsBar"
         android:orientation="vertical">
 
@@ -59,215 +59,19 @@
     <View
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="620dp"
+        android:layout_height="680dp"
         android:layout_below="@id/llViewActivity"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/backing_shape"
         android:backgroundTint="@color/Dark_Green" />
 
-    <LinearLayout
-        android:id="@+id/llViewActivityDetails"
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="680dp"
+        android:id="@+id/fcFragmentContainer"
         android:layout_below="@id/llViewActivity"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:layout_marginTop="16dp"
+        />
 
-
-        <LinearLayout
-            android:id="@+id/llactivityViewTop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/llBackandLogButtons"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:id="@+id/rlBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <View
-                        android:id="@+id/vBack"
-                        android:layout_width="180dp"
-                        android:layout_height="55dp"
-                        android:background="@drawable/rounded_rectangle" />
-
-                    <View
-                        android:id="@+id/vBackColor"
-                        android:layout_width="65dp"
-                        android:layout_height="45dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/rounded_rectangle"
-                        android:backgroundTint="@color/teal_200" />
-
-                    <TextView
-                        android:id="@+id/tvBackText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_marginTop="13dp"
-                        android:text="Back"
-                        android:textSize="20sp" />
-
-                    <View
-                        android:id="@+id/vBackArrow"
-                        android:layout_width="45dp"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/navigation_arrow" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rlViewLogs"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/rlBack"
-                    android:layout_marginTop="15dp">
-
-                    <View
-                        android:id="@+id/vLog"
-                        android:layout_width="180dp"
-                        android:layout_height="55dp"
-                        android:background="@drawable/rounded_rectangle" />
-
-                    <View
-                        android:id="@+id/vLogColor"
-                        android:layout_width="65dp"
-                        android:layout_height="45dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/rounded_rectangle"
-                        android:backgroundTint="@color/teal_200" />
-
-                    <TextView
-                        android:id="@+id/tvLogText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="80dp"
-                        android:layout_marginTop="13dp"
-                        android:text="View Logs"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/tvLogX"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginTop="5dp"
-                        android:text="X"
-                        android:textColor="#000000"
-                        android:textSize="34sp" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/brownturtle" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llgoalcontainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvDes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Description"
-            android:textColor="@color/Input_Grey" />
-
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="match_parent"
-            android:layout_height="98dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/rounded_rectangle"
-            android:text="Description"
-            android:padding="5dp"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <View
-                    android:id="@+id/btnAddLog"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/rounded_item_box" />
-
-                <ImageView
-                    android:id="@+id/imgTurtle1"
-                    android:layout_width="60dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginTop="20dp"
-                    app:srcCompat="@drawable/cyanturtle" />
-
-
-                <ImageView
-                    android:layout_marginTop="12dp"
-                    android:id="@+id/imgTurtle"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:layout_centerHorizontal="true"
-                    android:background="@drawable/rounded_rectangle"
-                    app:srcCompat="@drawable/cyanturtle"
-                    android:layout_below="@id/fcFragmentContainer"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <View
-                    android:id="@+id/btnEditActivity"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/rounded_item_box" />
-
-                <ImageView
-                    android:id="@+id/imgTurtle2"
-                    android:layout_width="60dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginTop="20dp"
-                    app:srcCompat="@drawable/brownturtle" />
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </RelativeLayout>
