--- a/app/src/main/res/layout/customactivity.xml
+++ b/app/src/main/res/layout/customactivity.xml
@@ -4,7 +4,6 @@
     android:layout_width="wrap_content"
     android:layout_height="200dp"
     android:orientation="vertical"
-
     >
 
     <View
@@ -45,6 +44,7 @@
                 android:id="@+id/tvSecondaryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="14sp"
                 android:text="CategoryName" />
         </LinearLayout>
 
