--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvStopWatch"
@@ -151,10 +151,10 @@
                     android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded_rectangle"
+                    android:drawableLeft="@drawable/play_arrow"
                     android:text="Start"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:drawableLeft="@drawable/play_arrow"
                     android:theme="@style/button_colour_start" />
 
                 <Button
@@ -162,13 +162,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="@drawable/rounded_rectangle"
+                    android:drawableLeft="@drawable/replay"
                     android:text="Reset"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:drawableLeft="@drawable/replay"
-                    android:background="@drawable/rounded_rectangle"
-                    android:theme="@style/button_colour_reset"/>
+                    android:theme="@style/button_colour_reset" />
             </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llInputHours"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvHours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hours"
+                android:textColor="#FFFFFF" />
+
+            <TimePicker
+                android:id="@+id/dpHours"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:timePickerMode="spinner"
+                android:background="@drawable/rounded_rectangle"/>
+
         </LinearLayout>
 
         <Button
@@ -181,6 +203,7 @@
             android:backgroundTint="@color/Muted_Green"
             android:text="Add Log"
             android:theme="@style/button_colour_green" />
+
     </LinearLayout>
 
     <ImageView
