--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -84,20 +84,38 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvStartDate"
+            android:id="@+id/tvDates"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start Date"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+            android:text="Date"
+            android:textColor="#FFFFFF" />
 
-        <DatePicker
-            android:id="@+id/dpStartDate"
+        <LinearLayout
+            android:id="@+id/llDate"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:background="@drawable/rounded_rectangle"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnDate"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:text="Set Date"
+                android:textColor="#FFFFFF"
+                android:theme="@style/button_colour_green" />
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="--/--/----"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvOption"
