--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -109,11 +109,13 @@
             <TextView
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:gravity="center_horizontal"
                 android:text="--/--/----"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="24sp" />
         </LinearLayout>
 
