--- a/app/src/main/res/layout/activity_category_name.xml
+++ b/app/src/main/res/layout/activity_category_name.xml
@@ -8,7 +8,7 @@
     android:background="@color/Light_Green">
 
     <View
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="20dp"
         android:id="@+id/vwLogsBar"
         android:layout_width="4dp"
@@ -26,154 +26,152 @@
         android:rotation="-35"
         />
 
-    <LinearLayout
-        android:id="@+id/llLogsCategory"
-        android:layout_width="374dp"
-        android:layout_height="65dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/vwLogsBar"
-        android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/tvCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="18dp"
             android:text="{CategoryName}!"
             android:textColor="@color/Dark_Green"
             android:textSize="30dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </LinearLayout>
+            android:textStyle="bold" />
+
 
     <View
-        android:layout_below="@+id/llLogsCategory"
-        android:layout_marginTop="0dp"
+        android:layout_below="@+id/tvCategoryName"
+        android:layout_marginTop="12dp"
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="670dp"
+        android:layout_height="700dp"
         android:background="@drawable/backing_shape"
         android:backgroundTint="@color/Dark_Green"/>
 
-    <LinearLayout
-        android:id="@+id/llCategoryPage"
-        android:layout_width="391dp"
-        android:layout_height="569dp"
-        android:layout_below="@+id/llLogsCategory"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical">
-
-        <View
-            android:id="@+id/vwActivityBar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_rectangle"
-            android:backgroundTint="@color/Muted_Green" />
-
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Description of Category"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/txtCategoryDescription"
-            android:layout_width="match_parent"
-            android:layout_height="85dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/rounded_rectangle"
-            android:text="category" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/llactivitycontainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
-        </ScrollView>
-
-    </LinearLayout>
 
     <TextView
-        android:id="@+id/tvActivityBar"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvDescriptionPrompt"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="138dp"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:text="Description"
+        android:textColor="@color/Input_Grey"
+        android:layout_marginHorizontal="18dp"
+        android:layout_below="@id/tvSectionTitle"/>
+
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        android:layout_marginTop="5dp"
+        android:textSize="15dp"
+        android:layout_below="@id/tvDescriptionPrompt"
+        android:background="@drawable/rounded_rectangle"
+        android:text="Description"
+        android:padding="5dp"
+        android:layout_marginHorizontal="18dp"/>
+
+
+
+
+
+    <TextView
+        android:id="@+id/tvSectionTitle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:text="Activities"
+        android:textSize="30dp"
+        android:layout_marginTop="26dp"
+        android:textAlignment="center"
+        android:textColor="@color/Input_Grey"
         android:textStyle="bold"
-        android:textSize="30dp" />
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Muted_Green"
+        android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="20dp"
+        android:gravity="center"
+        android:layout_below="@id/tvCategoryName"/>
+
+
+    <ImageView
+        android:id="@+id/imgBackIndicator"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/navigation_arrow"
+        app:tint="@color/Input_Grey"
+        android:layout_marginLeft="42dp"
+        android:layout_marginTop="36dp"
+        android:clickable="true"
+        android:onClick="onClick"
+        android:layout_below="@id/tvCategoryName"
+        />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="360dp"
+        android:id="@+id/svBars"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="10dp"
+        android:layout_below="@id/tvDescription">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/llBars"
+            android:layout_gravity="center_horizontal"
+            >
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/llCategoryPage"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/llCategoryButton"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@id/svBars"
+        android:layout_marginHorizontal="20dp">
 
-
-        <Button
-            android:id="@+id/btnAddActvity"
-            android:layout_width="165dp"
+        <ImageView
+            android:id="@+id/imgAddLog"
+            android:layout_marginTop="12dp"
+            android:layout_width="180dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/rounded_rectangle"
+            app:srcCompat="@drawable/cyanturtle"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
 
+            />
 
-        <Button
-            android:id="@+id/btnEditCategory"
-            android:layout_width="165dp"
+        <ImageView
+            android:id="@+id/imgEditCategory"
+            android:layout_marginTop="12dp"
+            android:layout_width="180dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="22dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_item_box"
-            android:text=""
-            android:theme="@style/button_colour_white"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/rounded_rectangle"
+            app:srcCompat="@drawable/brownturtle"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            />
+
+
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/TvLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="93dp"
-        android:text="B"
-        android:textSize="40dp" />
 
-    <ImageView
-        android:id="@+id/imgTurtle"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="675dp"
-        android:layout_marginLeft="70dp"
-        app:srcCompat="@drawable/cyanturtle" />
 
-    <ImageView
-        android:id="@+id/imgTurtle2"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="675dp"
-        android:layout_marginLeft="255dp"
-        app:srcCompat="@drawable/brownturtle" />
+
+
+
+
+
 
 
 </RelativeLayout>
