--- a/app/src/main/res/layout/activity_view_details_fragment.xml
+++ b/app/src/main/res/layout/activity_view_details_fragment.xml
@@ -48,20 +48,21 @@
                     />
 
 
-
-                <ImageView android:id="@+id/imgBackIndicator"
+                <ImageView
+                    android:id="@+id/imgBackIndicator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/navigation_arrow"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="-56dp"
+                    android:background="@drawable/rounded_rectangle"
+                    android:backgroundTint="@color/purple_200"
                     android:clickable="true"
                     android:onClick="onClick"
-                    android:backgroundTint="@color/purple_200"
-                    android:background="@drawable/rounded_rectangle"
-                    android:paddingRight="15dp"
-                    android:paddingLeft="25dp"
                     android:paddingVertical="13dp"
-                    android:layout_marginTop="-56dp"
-                    android:layout_marginLeft="6dp"/>
+                    android:paddingLeft="25dp"
+                    android:paddingRight="15dp"
+                    app:srcCompat="@drawable/navigation_arrow"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
 
 
@@ -148,10 +149,11 @@
             android:layout_width="match_parent"
             android:layout_height="98dp"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
             android:background="@drawable/rounded_rectangle"
+            android:padding="5dp"
             android:text="Description"
-            android:padding="5dp"/>
+            android:textSize="15dp"
+            tools:ignore="TextSizeCheck" />
 
 
         <LinearLayout
