--- a/app/src/main/res/layout/activity_view_details_fragment.xml
+++ b/app/src/main/res/layout/activity_view_details_fragment.xml
@@ -107,7 +107,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imgActivityImage"
                 android:layout_width="170dp"
                 android:layout_height="140dp"
                 android:layout_marginLeft="20dp"
