--- a/app/src/main/res/layout/activity_logs_list.xml
+++ b/app/src/main/res/layout/activity_logs_list.xml
@@ -77,43 +77,65 @@
             android:background="@drawable/rounded_rectangle"
             android:backgroundTint="@color/Muted_Green" />
 
-        <TextView
-            android:id="@+id/tvCalendarDateHeading"
-            android:layout_width="200dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:text="Start Date" />
-
-        <DatePicker
-            android:id="@+id/dpStartDate"
+        <LinearLayout
+            android:id="@+id/llStartDate"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_rectangle"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner" />
-
-        <TextView
-            android:id="@+id/tvCalendarDateHeading2"
-            android:layout_width="200dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:text="End Date" />
-
-        <DatePicker
-            android:id="@+id/dpEndDate"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/rounded_rectangle"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnStartDate"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:text="Set Start Date"
+                android:textColor="#FFFFFF"
+                android:theme="@style/button_colour_green" />
+
+            <TextView
+                android:id="@+id/tvStartDate"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:gravity="center_horizontal"
+                android:text="--/--/----"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llEndDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnEndDate"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:text="Set End Date"
+                android:textColor="#FFFFFF"
+                android:theme="@style/button_colour_green" />
+
+            <TextView
+                android:id="@+id/tvEndDate"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_rectangle"
+                android:gravity="center_horizontal"
+                android:text="--/--/----"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
