--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -90,14 +90,14 @@
             android:textSize="20dp"
             android:text="Name" />
 
-        <TextView
-            android:id="@+id/txtActivtyName"
+        <EditText
+            android:id="@+id/etActivtyName"
             android:layout_width="330dp"
             android:layout_height="45dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="test" />
+            android:text="Enter Activity Name" />
 
         <TextView
             android:id="@+id/tvActivtyDescriptionHeading"
@@ -109,14 +109,14 @@
             android:textSize="20dp"
             android:text="Description" />
 
-        <TextView
-            android:id="@+id/txtDescription"
+        <EditText
+            android:id="@+id/etDescription"
             android:layout_width="330dp"
             android:layout_height="100dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="test" />
+            android:text="Enter Activity Description" />
 
         <TextView
             android:id="@+id/tvCategoryHeading"
