--- a/app/src/main/res/layout/activity_logs_list.xml
+++ b/app/src/main/res/layout/activity_logs_list.xml
@@ -145,6 +145,7 @@
             tools:ignore="SpeakableTextPresentCheck">
 
             <LinearLayout
+                android:id="@+id/llLogContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
