--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,9 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Help">
+    android:background="@color/Light_Green">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/vwLogsBar"
+        android:layout_width="4dp"
+        android:layout_height="90dp"
+        android:background="@drawable/rounded_rectangle"
+        android:backgroundTint="@color/Dark_Green"/>
+
+    <LinearLayout
+        android:id="@+id/llScreenHeading"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_toRightOf="@id/vwLogsBar">
+
+        <TextView
+            android:id="@+id/tvScreenFunction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:textSize="30dp"
+            android:layout_marginTop="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/Dark_Green"/>
+
+        <TextView
+            android:id="@+id/tvScreenSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Goal"
+            android:textStyle="bold"
+            android:textSize="40dp"
+            android:layout_marginTop="-10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/Dark_Green"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgBlackTurtle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:srcCompat="@drawable/blackturtle"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="10dp"
+        android:rotation="-45"
+        />
+
+    <View
+        android:layout_below="@id/llScreenHeading"
+        android:layout_marginTop="20dp"
+        android:id="@+id/vwBackingBoard"
+        android:layout_width="match_parent"
+        android:layout_height="640dp"
+        android:background="@drawable/backing_shape"
+        android:backgroundTint="@color/Dark_Green"/>
+
+
+    <TextView
+        android:id="@+id/tvGoalHeading"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/Input_Grey"
+        android:text="Goal"
+        android:textAlignment="center"
+        />
+
+
+    <ImageView
+        android:id="@+id/imgCyanTurtle"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:srcCompat="@drawable/cyanturtle"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="436dp"
+        android:rotation="25"
+        />
+
+    <ImageView
+        android:id="@+id/imgGreenTurtle"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
+        app:srcCompat="@drawable/greenturtle"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="410dp"
+        android:rotation="-30"
+        />
+
+
+</RelativeLayout>
